--- a/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
@@ -6,7 +6,7 @@
 						<ul>
 							<!-- Play link  -->
 							<li class="play">
-								<a href="{{ item.release.get_api_url }}#5#replace" title="Play" class="playable popup"><img src="http://openbroadcast.ch//media/img/base/spacer.png" width="16" height="16" alt="Play"></a>
+								<a href="{{ item.release.get_api_url }}#{{ forloop.counter0 }}#replace" title="Play" class="playable popup"><img src="http://openbroadcast.ch//media/img/base/spacer.png" width="16" height="16" alt="Play"></a>
 							</li>
 						</ul>
 
