--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -10,8 +10,7 @@
 		<ul class="unstyled">
 			<!-- Play link  -->
 			<li class="play">
-				
-				<a href="/api/releases/{{ item.uuid }}/#0#replace" title="Play" class="playable popup"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Play" /></a>
+				<a href="{{ item.get_api_url }}#0#replace" title="Play" class="playable popup"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Play" /></a>
 				
 				<!--<a class="icon-container play playable popup" href="/api/releases/e43282ba-8ef8-11e1-8c53-e92ad7b37e38/#0#replace">-->
 			
