--- a/website/site-static/sass/aplayer/_style.sass
+++ b/website/site-static/sass/aplayer/_style.sass
@@ -4,7 +4,7 @@
 $window-width: 100%
 $outer-padding: 10px
 
-$padding-inner: 10px
+$height-navigation: 32px
 
 $inner-width: auto
 
@@ -17,70 +17,47 @@ $controls-height: 160px
 // main wrapper
 body.popup
 
-  background-color: #fff
-  
-  
-  // font colors
-  color: white
-  a
-    &:link, &:visited
-      color: $black
-  
-    &:active, &:hover
-      // background-color: $color-user-action
-      // color: $color-base-fg
-  
-  
-  #overlay_container
-    color: $black
-    position: fixed
-    background-color: $white
-    width: 100%
-    height: 100%
-    z-index: 10
-    padding: 10px
-    top: 0
-    left: 0
+  .screen.controls
+
+  // navbar override
+  .navbar .nav
+    > li > a
+      padding: 1px 5px 0px
+      margin: 6px 5px 6px
+  .navbar .navbar-inner
+    background-color: #333
+  .navbar .active > a
+    background-color: #333
+    border: 1px solid #a5a5a5 
     
-    h1, h2, h3, h4, h5, h6
-      font-size: 48px
+
+    
 
 
+  &.buffering
+    div.ajax-indicator
+      display: block 
+    
+  &.paused
+    .hidden-while-paused
+      display: none
+    .item.listing
+      &.active
+        background-color: #fff00f !important
+        text-decoration: blink
+  &.playing
+    .hidden-while-playing
+      display: none
+    .item.listing
+      &.active
+        background-color: #fff00f !important
+        text-decoration: blink
 
-  .header
-    background-color: $white
-    position: fixed
-    width: 100%
-    left: 0
-    top: 0
-    
-  .inner
-    margin-top: 220px
-    
-  .footer
-    position: fixed
-    width: 100%
-    left: 0
-    bottom: 0
-    background-color: $white
-    padding: $outer-padding
-    height: 40px
-    overflow: auto
-    
-    &.hover
-      height: 140px
-    
-  #aplayer_controls
-    width: 1px
-    height: 1px
-    top: 0
-    left: 0
-    
-  
-  .wrapper
-    > div
-      width: $window-width
-      margin: 0
+  &.buffering
+    .hidden-while-buffering
+      display: none
+
+
      
   div.ajax-indicator
     display: none
@@ -93,132 +70,169 @@ body.popup
     height: 24px
     background-image: url(#{$static-url}img/base/ajax-loader.l.invers.gif)
     
-    
-  &.buffering
-    div.ajax-indicator
-      display: block 
-    
-  &.paused
-    .item.listing
-      &.active
-        background-color: #fff00f !important
-        text-decoration: blink
 
-  div.container.controls
-  
-    // background-color: $color-player-action // black if not set...
-    
-    height: $controls-height
-    width: $inner-width
-    // padding: $outer-padding
+body.popup
 
-  
-    div.container
+  footer
+    width: 100%
+    .container
+      padding-left: 10px
     
-      &.image
-        padding: 10px 0 0 0
-        height: $controls-height
-        width: $controls-height
-        .wrapper > img
-          display: none
-          &:first-child
-            display: block
+  section.container
+    width: 100%
+    background: #efefef
+    // margin-top: $height-navigation
+    
+  .screen
+    .padded-x, .padded-y
+      padding: 10px
+    
+  .screen.controls
+  
+    // height: 141px
+    width: 100%
+    position: fixed
+    top: $height-navigation
+    
+    background: whitesmoke
+    border-bottom: 1px solid #dddddd
+    
+    .information
+      h1
+        font-size: 14px
+        line-height: 20px
+        margin-bottom: 0px !important
+      h2, h3
+        font-size: 12px
+        line-height: 18px
+        margin-bottom: 0px !important
+        small
+          font-size: 10px
+          padding-left: 14px
+          color: #333
+    
+    
+    .image > img
+      height: 120px
+      width: 120px
+     
+    .aplayer-information
+      height: 80px
       
-      &.information
-        // min-width: 240px
+    .aplayer-progress
+      height: 18px
+      
+    .aplayer-controls
+      // background: yellow
+      padding: 2px 0 2px 10px
+      border-top: 1px solid #dddddd
+      height: 18px
+      overflow: hidden
+      
+      a
+        font-size: 14px
+        color: #a5a5a5
+        &:hover
+          color: #00bb00
+          text-decoration: none
+      
+    
+    
+  .screen.controls
+  
+    .image > img
+      height: 120px
+      width: 120px
+    
+  .screen.playlist
+    overflow-y: scroll
+    overflow-x: hidden
+    height: 400px
+    width: 100%
+    top: 182px
+    position: fixed
+    
+    padding-top: 24px
+    
+    .item
+      border-bottom: 1px solid #efefef
+      &:first-child
+        border-top: 1px solid #efefef
+      .wrapper
+        padding: 2px 10px
+        
+        .icon
+          padding-top: 12px
+          i
+            margin-left: 6px
+            color: #a5a5a5
+        
+        .information
+          h1
+            font-size: 12px
+            line-height: 16px
+            margin-bottom: 0px !important
+          h2, h3
+            font-size: 12px
+            line-height: 16px
+            margin-bottom: 0px !important
+            small
+              font-size: 10px
+            
+        .duration
+          color: #5a5a5a
+          font-size: 10px
+          padding-top: 0px
+          text-align: right
+          
+      &.hover, &.playing
+        cursor: pointer
+        border-bottom: none
+        background: #ddffd9
+        .icon > i
+          color: #00bb00
+        .indicator
+          display: block
+          
+
+        
+      .indicator
+        display: none
+        height: 1px
         overflow: hidden
-        color: white
-        width: 440px
-        height: $controls-height - $outer-padding
-        padding: $outer-padding 0 $outer-padding $outer-padding
-        
+        width: 100%
         .wrapper
-          height: $controls-height - 36px - $outer-padding
-          h1, h2
-            font-size: 36px
-          
-        .controls
-          height: 26px
-          //+icon-container()
-          // +icon-white16()
-          
-          ul > li
-            width: 32px
-            height: 32px
-            cursor: pointer
-            margin-right: 8px
-            padding: 0
-            > a
-              display: block
-              height: 32px
-              width: 32px
-            
-            background-image: url(#{$static-url}img/aplayer/icon32.sprite.png)
-            background-repeat: no-repeat
-            
-            &.play
-              background-position: 0px 0px
-            &.pause
-              background-position: -32px 0px
-            &.prev
-              background-position: -64px 0px
-            &.stop
-              background-position: -96px 0px
-            &.next
-              background-position: -128px 0px
-          
-          .icon-container span.expandable
-            display: none
-          
-          // hide state-dependant icons
-          .icon.track-stop, .icon.track-play
-            display: none
-
-  // show/hide buttons depending on state
-  &.playing, &.buffering
-    .icon.track-stop
-      display: block !important
-  &.idle, &.paused
-    .icon.track-play
-      display: block !important
-
-        
+          background: #efefef
+          padding: 0 !important
+          .inner
+            width: 0%
+            background: #00bb00
+    
       
-  div.listing.playlist
-    width: $inner-width
-    padding: 0 $outer-padding $outer-padding
-    div.item
-      +aplayer($inner-width, 600px, $inner-width, 51px)
-      margin: 2px 0 0 0 !important
-      //+icon-container()
       
-      &:last-child
-        margin-bottom: 60px !important
+  #progress_bar
+    margin-top: 20px
+    > div
+      float: left
+      // background: red
       
-      div.playhead
-        &.loading
-          *
-            background-color: transparent !important
-      div.background
-        background-color: white
+      &.time-current
+        padding: 0 0 0 10px
+        
+      &.indicator
+        width: 100%
+        .wrapper
+          height: 12px
+          margin: 0 10px
+          border: 1px solid #efefef
+          overflow: hidden
+          background: $white
+          .inner
+            width: 0%
+            background: #ddffd9
+            border-right: 1px solid #00bb00
+    
+  
 
 
-      &.hover
-        div.background
-          //background-color: $color-player-action-light !important
-        
-        div.indicator
-        
-        div.handler
-          cursor: crosshair !important
-          background-image: url(#{$static-url}img/aplayer/playhead.handler.png) !important
-          background-repeat: no-repeat
-          
-          
-      &.active
-        div.background
-          //background-color: $color-player-action !important
-        
-        div.indicator
-          background-image: url(#{$static-url}img/aplayer/playhead.indicator.png)
-          background-repeat: no-repeat
+
