--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -8,7 +8,7 @@
 $static-url: '/static/'
 
 // Links
-$linkColor: #63C !default
+$linkColor: #6633CC !default
 $linkColorHover: darken($linkColor, 15) !default
 
 // Site
