--- a/website/site-static/sass/_itemview.sass
+++ b/website/site-static/sass/_itemview.sass
@@ -1,6 +1,16 @@
 @import "vars"
 
 
+// comments
+
+section.comments.disqus
+  margin-top: 36px
+
+  #footer
+    display: none !important
+    height: 0px
+    width: 0px
+
 .item_detail section
   &:first-child
     background-color: #F5F5F5
@@ -11,6 +21,15 @@
   font-size: 90%
   line-height: 11px
   text-align: left
+  
+  
+
+    
+  .image
+    img
+      width: 135px
+      height: 135px
+  
 
   h2
     //margin-bottom: 16px
