--- a/website/site-static/sass/_mixins.sass
+++ b/website/site-static/sass/_mixins.sass
@@ -22,6 +22,10 @@
   float: left
   margin-right: 4px
   a
+    // added
+    float: left
+    margin-right: 4px
+    // end added
     height: 16px
     width: 16px
     display: block
