--- a/website/site-static/sass/_toolbar.sass
+++ b/website/site-static/sass/_toolbar.sass
@@ -61,7 +61,10 @@ div.navbar .container
     color: #bbb
     
     .logo
-      width: 100px
+      width: 120px
+      padding-left: 20px
+      background-image: url(/static/img/icons/site/icon.static.gif)
+      background-repeat: no-repeat
     
     li
       display: inline
