--- a/website/templates/element/chat/_message_list.html
+++ b/website/templates/element/chat/_message_list.html
@@ -7,7 +7,7 @@
 <script src="{{ STATIC_URL }}js/lib/ICanHaz.js"></script>
 
 
-<script src="http://node05.daj.anorg.net:8088/socket.io/socket.io.js"></script>
+<script src="http://localhost:8888/socket.io/socket.io.js"></script>
 
 		
 		<script id="tpl_chat_message" type="text/html">
@@ -16,6 +16,16 @@
 	            <img src="{{ media_url }}{{ object.image }}" />
 	            <span class="who">{{ object.user }}<span class="timestamp">{{ timestamp }}</span></span>
 	            <span class="message">{{ object.comment }}</small>
+	        </li>
+	        {% endverbatim %}
+        </script>
+		
+		<script id="tpl_media_list_item" type="text/html">
+			{% verbatim %}
+	        <li class="item media {{ object.uuid }}">
+	            <img src="{{ media_url }}{{ object.release.main_image }}" />
+	            <span class="who">{{ object.name }}<span class="timestamp">{{ object.timestamp }}</span></span>
+	            <span class="message">{{ object.artist.name }} | {{ object.release.name }}</small>
 	        </li>
 	        {% endverbatim %}
         </script>
@@ -28,8 +38,8 @@ SocketApp = function(base_app) {
 	this.base_app = base_app;
 
 	this.socket
-	//this.socket_url = 'http://localhost:8888/';
-	this.socket_url = 'http://node05.daj.anorg.net:8088/'
+	this.socket_url = 'http://localhost:8888/';
+	//this.socket_url = 'http://node05.daj.anorg.net:8088/'
 
 	this.init = function() {
 		console.log('SocketApp: init');
@@ -46,27 +56,42 @@ SocketApp = function(base_app) {
 			self.socket = io.connect(self.socket_url);
 			console.log('socket connection ok')
 
-			self.socket.on('chat', function(data) {
+			self.socket.on('push', function(data) {
 				console.log('news from socket');
 
 				// data = JSON.parse(data);
 
-				console.log(data);
+				console.log('push-data:', data);
+				console.log('data-route: ', data.route)
 				
-
-				var html = ich.tpl_chat_message({
-					object : data,
-					media_url: self.media_url,
-				});
-
-				if(data.route == '/api/v1/release/1963/') {
+				// routing data..
+				if(data.route == '{{ object.get_api_url }}') {
 					console.log('my channel!!')
 				};
 
+				// build content by type
+				
+				// chat messages
+				if(data.type == 'message') {
+					var html = ich.tpl_chat_message({
+						object : data,
+						media_url: self.media_url,
+					});
+				}
+
+				// TODO: more modularity..
+				if(data.type == 'media') {
+					var html = ich.tpl_media_list_item({
+						object : data.object,
+						media_url: self.media_url,
+					});
+				}
+
+
 				$('.chat ul').prepend(html);
 				
-				$('.chat ul').children().slice(99, 1000).fadeOut(500);
-				$('.chat ul').children().slice(100, 1000).remove();
+				$('.chat ul').children().slice(9, 1000).fadeOut(500);
+				$('.chat ul').children().slice(10, 1000).remove();
 
 			});
 
@@ -86,6 +111,7 @@ sa.init();
 </script>
 {% endaddtoblock %}
 <section  class="chat">
+	{{ router }}
 	<ul></ul>
 </section>
 
