--- a/website/templates/element/chat/_message_list.html
+++ b/website/templates/element/chat/_message_list.html
@@ -7,7 +7,7 @@
 <script src="{{ STATIC_URL }}js/lib/ICanHaz.js"></script>
 
 
-<script src="http://localhost:8888/socket.io/socket.io.js"></script>
+<script src="http://dev.openbroadcast.ch:8888/socket.io/socket.io.js"></script>
 
 		
 		<script id="tpl_chat_message" type="text/html">
@@ -38,8 +38,8 @@ SocketApp = function(base_app) {
 	this.base_app = base_app;
 
 	this.socket
-	this.socket_url = 'http://localhost:8888/';
-	//this.socket_url = 'http://node05.daj.anorg.net:8088/'
+	//this.socket_url = 'http://localhost:8888/';
+	this.socket_url = 'http://dev.openbroadcast.ch:8088/'
 
 	this.init = function() {
 		console.log('SocketApp: init');
