--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -118,6 +118,10 @@ $successText: #0B0 !default
 $successBackground: #DDFFD9 !default
 $successBorder: darken(adjust-hue($successBackground, -10), 5%) !default
 
+$successTextAlt: #6633CC !default
+$successBackgroundAlt: #f3f0fb !default
+$successBorderAlt: darken(adjust-hue($successBackgroundAlt, -10), 5%) !default
+
 $infoText: #7a7a7a !default
 $infoBackground: #FFFCDE !default
 $infoBorder: darken(adjust-hue($infoBackground, -10), 7%) !default
