--- a/website/apps/fluent_comments/templates/comments/form.html
+++ b/website/apps/fluent_comments/templates/comments/form.html
@@ -3,14 +3,14 @@
 {% if not form.target_object|comments_are_open %}
     <p>{% trans "Comments are closed." %}</p>
 {% else %}
-    <form action="{% comment_form_target %}" method="post" class="js-comments-form comments-form form-horizontal"
+    <form action="{% comment_form_target %}" method="post" class="js-comments-form comments-form"
           data-ajax-action="{% url 'comments-post-comment-ajax' %}">{% csrf_token %}
       {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
 
       {{ form|crispy }}
 
       <div class="form-actions">
-        <input type="submit" name="post" class="btn btn-submit" value="{% trans "Post" %}" />
+        <input type="submit" name="post" class="pull-right btn btn-primary btn-submit" value="{% trans "Post" %}" />
         <!--
         <input type="submit" name="preview" class="btn btn-submit" value="{% trans "Preview" %}" />
         -->
