--- a/website/apps/importer/templates/importer/import_list.html
+++ b/website/apps/importer/templates/importer/import_list.html
@@ -9,7 +9,7 @@
 <section>
 	
 	<div class="page-header">
-		<h2>{% trans "Imports" %} <small>{% trans "Start a new import session or handle existing ones" %}</small></h2>
+		<h2>{% trans "Uploads" %} <small>{% trans "Start a new import session or handle existing ones" %}</small></h2>
 	</div>
 	<div>
 		<p>{% lorem 40 w %}.</p>
@@ -18,8 +18,8 @@
 	
 	<div>
 		<a class="btn btn-primary btn" href="{% url importer-import-create %}">
-			<i class="icon-music icon-white"></i>
-			<span> {% trans "Start Importing" %}</span>
+			<i class="icon-cloud-upload icon-white"></i>
+			<span> {% trans "Start Uploading" %}</span>
 		</a>
 	</div>
 	
