--- a/website/site-static/sass/apps/_comment.sass
+++ b/website/site-static/sass/apps/_comment.sass
@@ -5,18 +5,45 @@
 section.comments.on-site
   background-color: $white !important
   
+  form
+    textarea
+      +box-sizing(border-box)
+      background: #fafafa
+      width: 100%
+      height: 48px
+      
+    .form-actions
+      border: none
+      margin-top: 0
+      padding-top: 0
+  
   #div_id_honeypot
     display: none
   
-  div.listing.comment
-    display: none // hide for browser...
   
-    div.item.comment
+  section.listing
+  
+    .item
       border: none
       padding: 5px
       margin: 5px 0
+      +clearfix()
+      
+      img
+        width: 48px
+        height: 48px
+        float: left
+        margin-right: 10px
       
       border-bottom: 1px solid #ececec
       
-      .comment-text, .comment-text > p
-        color: green
+      &.media
+        // background: red
+        background: $successBackgroundAlt
+        border-bottom: none
+    
+    .comment-text, .comment-text > p
+      color: green
+  
+  div.listing.comment
+    display: none // hide for browser... comments handled via socketio
