--- a/website/site-static/sass/apps/_exporter.sass
+++ b/website/site-static/sass/apps/_exporter.sass
@@ -10,30 +10,51 @@ div.listview.export
   .item
   
     &.init
-      i.visible-while-init
+      .visible-while-init
         display: inline-block
         
     &.done
       td
+        background-color: $successBackgroundAlt
+      .visible-while-done
+        display: inline-block
+        color: $successTextAlt
+        
+    &.downloaded
+      td
         background-color: $successBackground
-      i.visible-while-done
+      .visible-while-downloaded
         display: inline-block
         color: $successText
         
     &.ready
-      i.visible-while-ready
+      .visible-while-ready
         display: inline-block
   
     &.progress
-      i.visible-while-progress
+      .visible-while-progress
         display: inline-block
   
     &.error
       td
         background-color: $errorBackground
-      i.visible-while-error
+      .visible-while-error
         display: inline-block
         color: $errorText
+        
+
+
+
+
+    .action.download
+      a
+        color: #a5a5a5
+        cursor: wait
+    &.done
+      .action.download
+        a
+          color: $linkColor
+          cursor: pointer
         
 
 
