--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -67,6 +67,8 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/bootstrap/bootstrap-button.js"></script>{% endaddtoblock %}
 	
 	
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/ICanHaz.js"></script>{% endaddtoblock %}
+	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/history.js"></script>{% endaddtoblock %}
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/pagedown/Markdown.Converter.js"></script>{% endaddtoblock %}
@@ -89,6 +91,8 @@
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.base.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.ui.js"></script>{% endaddtoblock %}
+	
+	<!-- alibrary apps -->
 	
 	<!-- utils -->
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util/util.notify.js"></script>{% endaddtoblock %}
